Interface, Pipes(upped, lower number and currencies), ngfor testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -353,8 +353,7 @@
   </div>
 
   <!-- Testing Components-->
-  <app-mirrr></app-mirrr>
-  
+  <app-person></app-person>
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
