--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -1,5 +1,6 @@
 <h2>People</h2>
 <ul class="persons">
+    <!--ngFor test-->
     <li *ngFor="let p of all">
     <span class="badge">{{p.id}}</span> {{p.name}} has {{p.height | number:'1.2'}}m
   </li>
