Sub-Components, Input Property binding (like vue props)

--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -7,13 +7,4 @@
   </li>
 </ul>
 
-<div *ngIf="selectedPerson">
-
-  <h2>{{selectedPerson.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{selectedPerson.id}}</div>
-  <div>
-    <label for="person-name">Person name: </label>
-    <input id="person-name" [(ngModel)]="selectedPerson.name" placeholder="name">
-  </div>
-
-</div>
+<app-person-details [person]="selectedPerson"></app-person-details>
