Display data using a message service (and a component)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -354,6 +354,8 @@
 
   <!-- Testing Components-->
   <app-person></app-person>
+  <app-messages></app-messages>
+  
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
