Routing ok. Added Dashboard component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -353,6 +353,8 @@
   </div>
 
   <!-- Testing Components-->
+  
+  <a routerLink="/persons">Persons</a>
   <app-person></app-person>
   <app-messages></app-messages>
   
