Setting up the routes. Route to detail id isnt working

--- a/src/app/person-details/person-details.component.html
+++ b/src/app/person-details/person-details.component.html
@@ -6,3 +6,5 @@
         <input id="person-name" [(ngModel)]="person.name" placeholder="name">
     </div>
 </div>
+<!--Go back button-->
+<button (click)="goBack()">go back</button>
