--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <h2>Top people</h2>
 <div class="person-menu">
-  <a *ngFor="let p of persons">
+  <a *ngFor="let p of persons"
+  routerLink="/detail/{{p.id}}">
     {{p.name}}
   </a>
 </div>
