Routing problem solved

--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -2,7 +2,7 @@
 
 <ul class="persons">
   <li *ngFor="let p of all">
-    <a routerLink="/datail/{{p.id}}">
+    <a routerLink="/detail/{{p.id}}">
       <span class="badge">{{p.id}}</span> {{p.name}} has {{p.height | number:'1.2'}}m
     </a>
   </li>
