Checking tests: spec.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,7 +328,7 @@
 </div>
 
 <div class="content" role="main">
-
+  <span>AngularTest app is running!</span>
 
   <!-- Testing Components-->
   <nav>
