--- a/src/app/person-details/person-details.component.html
+++ b/src/app/person-details/person-details.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="person">
     <h2>{{person.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{person.id}}</div>
+    <div><span>Name: </span>{{person.name}}</div>
     <div>
         <label for="person-name">person name: </label>
         <input id="person-name" [(ngModel)]="person.name" placeholder="name">
